Programming Languages/Hw2/part4/t31.output
running e2c
compiling the C generated code
t31.c: In function ‘main’:
t31.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t31.c:5:2: error: expected expression before ‘=’ token
  = ;
  ^
t31.c:6:16: error: ‘a’ undeclared (first use in this function)
 printf("%d\n", a);
                ^
t31.c:6:16: note: each undeclared identifier is reported only once for each function it appears in
t31.c:7:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t31.c:8:2: error: expected expression before ‘=’ token
  = ;
  ^
t31.c:9:2: error: expected expression before ‘=’ token
  = ;
  ^
t31.c:11:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t31.c:12:2: error: expected expression before ‘=’ token
  = ;
  ^
t31.c:13:2: error: expected expression before ‘=’ token
  = ;
  ^
t31.c:15:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t31.c:16:2: error: expected expression before ‘=’ token
  = ;
  ^
t31.c:17:2: error: expected expression before ‘=’ token
  = ;
  ^
t31.c:21:16: error: ‘afour’ undeclared (first use in this function)
 printf("%d\n", afour);
                ^
